--- a/api-wrapper/build.gradle
+++ b/api-wrapper/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     api 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.13.4'
     compileOnly 'org.immutables:value:2.9.2'
     compileOnly 'org.immutables:builder:2.9.2'
+    implementation platform('io.projectreactor:reactor-bom:2020.0.23')
+    implementation 'io.projectreactor:reactor-core'
     annotationProcessor "org.immutables:value:2.9.2"
 }
 
