--- a/api-wrapper/build.gradle
+++ b/api-wrapper/build.gradle
@@ -7,6 +7,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:20.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     api 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
     api 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.13.4'
