--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ loader_version=0.14.9
 
 #Fabric api
 fabric_version=0.62.0+1.19.2
+libgui_version=6.3.0+1.19
 
 # Mod Properties
 	mod_version = 1.0.0
