--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,13 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
+	maven {
+		name = "CottonMC"
+		url = "https://server.bbkr.space/artifactory/libs-release"
+		content {
+			includeGroup "io.github.cottonmc"
+		}
+	}
 }
 
 dependencies {
@@ -17,6 +24,7 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
 	implementation project(":api-wrapper")
 }
 
